# cross_compile

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  .vale.ini  CHANGELOG.rst  CONTRIBUTING.md  DEVELOPING.md  Dockerfile_cc_for_arm  MANIFEST.in  README.md  automatic_cross_compile.sh  cc_workspace.sh  codecov.yml  cross_compile.repos  entry_point.sh  env.sh  package.xml  requirements.txt  setup.cfg  setup.py  tox.ini  troubleshooting.md
.github/: CODEOWNERS  dependabot.yml
.travis/: run_travis_build
cmake-toolchains/: generic_linux.cmake  raspbian.sh  ubuntu-arm64.sh
cross_compile/: Dockerfile_ros  Dockerfile_ros2  Dockerfile_workspace  __init__.py  __main__.py  ros2_cross_compile.py  ros_cross_compile.py  sysroot_compiler.py
docker_environments/: Dockerfile_base  Dockerfile_raspbian  Dockerfile_ubuntu-arm64
docs/: Makefile  make.bat  requirements.txt
ignore_pkgs_scripts/: ardent_ignore.sh  bouncy_ignore.sh  crystal_ignore.sh  dashing_ignore.sh  master_ignore.sh
mixins/: README.md  cross-compile.mixin  index.yaml  install.sh  lint.py
ros_cross_compile/: __init__.py  __main__.py  builders.py  data_collector.py  dependencies.py  docker_client.py  pipeline_stages.py  platform.py  ros_cross_compile.py  runtime.py  sysroot_compiler.py  sysroot_creator.py
sysroot/: Dockerfile_raspbian_arm  Dockerfile_ubuntu_arm  Dockerfile_ubuntu_arm64  Dockerfile_ubuntu_arm64_prebuilt  Dockerfile_ubuntu_armhf
sysroots/: Dockerfile_raspbian  Dockerfile_ubuntu-arm64  ubuntu-arm64_get_sysroot.sh
test/: __init__.py  custom-setup-with-data.sh  custom-setup.sh  run_e2e_test.sh  run_e2e_test_debian.sh  run_unit_tests.sh  test_builders.py  test_colcon_mixins.py  test_copyright.py  test_data_collector.py  test_dependencies.py  test_docker_client.py  test_entrypoint.py  test_flake8.py  test_mypy.py  test_pep257.py  (+5 more)
test/dummy_pkg2_ros2/: package.xml
test/dummy_pkg_ros2_cpp/: CMakeLists.txt  main.cpp  package.xml
(+35 files in other folders)
