<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_pkg2_ros2</name>
  <version>0.0.0</version>
  <description>end to end ROS2 test package for cross compiling</description>
  <maintainer email="example@example.com">Nobody</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
